----------
v6.1.0-git
----------

[mms] Initialize viewport and mailbox list in single AJAX call when initially
      loading the dynamic mailbox view.
[mms] Add message thread view to dynamic mailbox preview.
[mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
[mms] Collapse multiple mailbox export options in dynamic mailbox view to
      single action.
[mms] Importing a PGP personal key now only requires the private key.


----------
v6.0.3-git
----------

[mms] Fix verifying an enveloped signed & encrypted S/MIME message (Bug
      #11874).
[mms] Fix converting charset of signature/trailer in compose message if not
      sending in UTF-8 (Bug #11898).
[mms] Fix redirection to mailbox page after sending message in minimal view
      (Bug #11897; Thomas Jarosch <thomas.jarosch@intra2net.com>).
[mms] Fix duplicate signature being added to compose messages in minimal view
      (Bug #11896; Thomas Jarosch <thomas.jarosch@intra2net.com>).
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[mms] Fix loss of HTML body if related conversion is turned off (Bug #11883;
      Thomas Jarosch <thomas.jarosch@intra2net.com>).
[mms] Ensure that polled mailboxes in dynamic view continue to show unseen
      message count if its child status changes (Bug #11864).
[jan] Include address groups in auto-completion list if address book is below
      AJAX lookup threshold.
[jan] Update French translation (Laurent Foucher
      <laurent.foucher@iut-tlse3.fr>).
[mms] Correctly remember form state when refreshing basic view compose page
      (Bug #11794).
[mms] Fix NOT criteria for custom header searches (Bug #11802).
[mms] Fix saving compose message to draft mailbox when session expires (Bug
      #11795).
[mms] Honor 'hide_when_unlimited' option for the quota driver (Bug #11782;
      Thomas Jarosch <thomas.jarosch@intra2net.com>).
[mms] Fix toggling other options in dynamic compose screen.


------
v6.0.2
------
