@@ -1073,7 +1073,7 @@ if (!$showmenu) {
 }
 $page_output->addScriptPackage('IMP_Script_Package_ComposeBase');
 $page_output->addScriptFile('compose.js');
-$page_output->addScriptFile('md5.js', 'horde');
+$page_output->addScriptFile('murmurhash3.js');
 $page_output->addInlineJsVars($js_vars);
 if (!$redirect) {
     $imp_ui->addIdentityJs();
