@@ -39,7 +39,7 @@ class IMP_Dynamic_Compose_Common
 
         $page_output->addScriptPackage('Imp_Script_Package_ComposeBase');
         $page_output->addScriptFile('compose-dimp.js');
-        $page_output->addScriptFile('md5.js', 'horde');
+        $page_output->addScriptFile('murmurhash3.js');
         $page_output->addScriptFile('textarearesize.js', 'horde');
 
         if (!$prefs->isLocked('default_encrypt') &&
