@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2012-11-06</date>
- <time>01:52:40</time>
+ <date>2012-12-23</date>
+ <time>22:16:21</time>
  <version>
   <release>6.1.0</release>
   <api>6.0.0</api>
@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Use more efficient murmurhash3 to determine changes in compose message that will trigger auto saved drafts.
 * [mms] Initialize viewport and mailbox list in single AJAX call when initially loading the dynamic mailbox view.
 * [mms] Add message thread view to dynamic mailbox preview.
 * [mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
@@ -83,6 +84,7 @@
     <file name="mailbox.js" role="horde" />
     <file name="message-dimp.js" role="horde" />
     <file name="message.js" role="horde" />
+    <file name="murmurhash3.js" role="horde" />
     <file name="passphrase.js" role="horde" />
     <file name="pgp.js" role="horde" />
     <file name="search.js" role="horde" />
@@ -1349,6 +1351,7 @@
    <install as="imp/js/mailbox.js" name="js/mailbox.js" />
    <install as="imp/js/message-dimp.js" name="js/message-dimp.js" />
    <install as="imp/js/message.js" name="js/message.js" />
+   <install as="imp/js/murmurhash3.js" name="js/murmurhash3.js" />
    <install as="imp/js/passphrase.js" name="js/passphrase.js" />
    <install as="imp/js/pgp.js" name="js/pgp.js" />
    <install as="imp/js/search.js" name="js/search.js" />
@@ -2897,6 +2900,7 @@
     <api>stable</api></stability>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Use more efficient murmurhash3 to determine changes in compose message that will trigger auto saved drafts.
 * [mms] Initialize viewport and mailbox list in single AJAX call when initially loading the dynamic mailbox view.
 * [mms] Add message thread view to dynamic mailbox preview.
 * [mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
