@@ -2,6 +2,8 @@
 v6.1.0-git
 ----------
 
+[mms] Use more efficient murmurhash3 to determine changes in compose message
+      that will trigger auto saved drafts.
 [mms] Initialize viewport and mailbox list in single AJAX call when initially
       loading the dynamic mailbox view.
 [mms] Add message thread view to dynamic mailbox preview.
